# ADKHack

./: .dockerignore  DEMO_GUIDE.md  Dockerfile  FINAL_WINNING_DEMO_COMMANDS.txt  README.md  README_DEPLOYMENT.md  REAL_ADK_DEMO_GUIDE.md  cleanup_project.bat  cloud-run.yaml  demo_cmd.bat  demo_frontend.bat  demo_menu.bat  demo_page.html  demo_script.py  deploy.sh  index.html  main.py  package-lock.json  package.json  requirements.txt  setup_api_key.py  test_adk_cmd.bat  test_api_key.py  test_deployed_cmd.bat  test_real_adk_agents.py  test_real_adk_simple.py  winning_demo.bat  winning_demo.py  winning_demo_script.md
agent_engine/: .env.txt  .pre-commit-config.yaml  Makefile  README_AGENT_ENGINE.md  __init__.py  agent.py  agent_config.yaml  deploy_agent.sh  env.template  pyproject.toml  requirements-dev.txt  requirements.txt
agent_engine/.github/workflows/: ci-cd.yml
backend/: package-lock.json  package.json  server.js
python_agents/: README.md  README_ADK.md  README_BIGQUERY.md  __init__.py  example_adk_agent.py  orchestrator.py  requirements.txt  test_analysis_agent.py  test_orchestrator.py  verify_agent.py
python_agents/agents/: __init__.py  ai_analysis_agent.py  alert_agent.py  analysis_agent.py  detection_agent.py  real_detection_agent.py
python_agents/utils/: __init__.py  mocks.py
src/: App.tsx
